--- a/style.css
+++ b/style.css
@@ -27,20 +27,23 @@ body {
     max-height: 500px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    border: 20px solid rgba(201, 197, 175, 0.938);
 }
 .block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    /* font-size: 15vmin; */
-    display: inline-block;
-    /* background-color: aqua; */
-    border: 5px solid black;
+    border: 5px solid rgba(92, 91, 86, 0.938);
+    cursor: pointer;
 }
 .span {
+    color: rgba(92, 91, 86, 0.938);
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
     font-size: 90px;
-    /* text-align: center; */
-    /* vertical-align: middle; */
 }
-
 #game-container {
     margin: 20px 0;
     /* flex-grow: 2; */
@@ -73,24 +76,37 @@ body {
 
 /* modals */
 .modal {
-    color: #ffbb00;
+    color: rgba(92, 91, 86, 0.938);
     font-size: 30px;
-    /* display: none;  */
-    /* position: fixed; */
+    display: none; 
+    position: fixed;
     z-index: 1;
-    margin: -500px auto;
-    width: 350px;
-    /* left: 0%; */
-    /* right: 50%; */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    box-shadow: 5px 5px 5px  rgba(0, 0, 0, 0.678);
+    left: 0;
+    top: 30px;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto;
     border-radius: 10px;
-    /* -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.5s;
-    animation-name: animatetop;
-    animation-duration: 0.5s; */
 }
+.modal-content {
+    position: relative;
+    background-color: rgba(201, 197, 175, 0.938);
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 400px;
+    box-shadow: 5px 5px 5px  rgba(0, 0, 0, 0.678);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 2s;
+    animation-name: animatetop;
+    animation-duration: 2s
+}
+
+@keyframes animatetop {
+    from {top: 0px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
 .modal-header {
     text-align: center;
 }
@@ -132,9 +148,7 @@ body {
     height: 30px;
     margin: auto 0;
 }
-/* input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance:inherit;
-} */
+
 button {
     font-size: 100%;
     font-weight: 800;
